--- a/news/2013/10/20/1.mdx
+++ b/news/2013/10/20/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "goldenstate intrams ’13: more successful and dazzling than ever"
-author: "Goldenstate"
-datePublished: "2013-10-20"
+slug: goldenstate-intrams-13-more-successful-and-dazzling-than-ever
+title: goldenstate intrams ’13: more successful and dazzling than ever
+description: General santos city – it was a picture of almost perfect execution, ornamented with beauty,...
+author: Goldenstate
+date: 2013/10/20
 ---
 
 General santos city – it was a picture of almost perfect execution, ornamented with beauty, agility, humility, and magnanimity. this is how the recently concluded college intramurals of goldenstate college-general santos went to happen.
