--- a/news/2014/03/02/1.mdx
+++ b/news/2014/03/02/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "goldenstate holds simultaneous seminars for students upgrading"
-author: "Goldenstate"
-datePublished: "2014-03-02"
+slug: goldenstate-holds-simultaneous-seminars-for-students-upgrading
+title: goldenstate holds simultaneous seminars for students upgrading
+description: In its ardent desire and golden commitment to equip students with the latest updates on...
+author: Goldenstate
+date: 2014/03/02
 ---
 
 In its ardent desire and golden commitment to equip students with the latest updates on the industry practices and to upgrade them on the current technology of ideas, goldenstate college of general santos city held simultaneous seminars among its students last february 8-9, 2014 at its own campus. resource speakers from manila and from deped general santos were invited to conduct the said seminars.
