--- a/news/2014/03/16/1.mdx
+++ b/news/2014/03/16/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "goldenstate college hosts educators’ appreciation night"
-author: "Goldenstate"
-datePublished: "2014-03-16"
+slug: goldenstate-college-hosts-educators-appreciation-night
+title: goldenstate college hosts educators’ appreciation night
+description: In age of dazzling technological advances and rapidly evolving knowledge, students must be able to...
+author: Goldenstate
+date: 2014/03/16
 ---
 
 In age of dazzling technological advances and rapidly evolving knowledge, students must be able to know more in order to compete and the task in preparing them to this largely demanding landscape falls to our educators.
