--- a/news/2014/06/30/1.mdx
+++ b/news/2014/06/30/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "goldenstate college joins in the celebration of ched’s 20th anniversary, wins the gold in the booth competition"
-author: "Goldenstate"
-datePublished: "2014-06-30"
+slug: goldenstate-college-joins-in-the-celebration-of-cheds-20th-anniversary-wins-the-gold-in-the-booth-competition
+title: goldenstate college joins in the celebration of ched’s 20th anniversary, wins the gold in the booth competition
+description: Goldenstate college is one with the commission on higher education ro xii in the celebration...
+author: Goldenstate
+date: 2014/06/30
 ---
 
 Goldenstate college is one with the commission on higher education ro xii in the celebration of its 20th anniversary held last may 19-20, 2014 at koronadal city. it was the first time the commission has celebrated this event with the participation of the different higher education institutions and state universities all over the region.
