--- a/news/2014/07/06/1.mdx
+++ b/news/2014/07/06/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "go and grow a million trees! goldenstate of koronadal’s advocacy in the preservation of our mother earth"
-author: "Goldenstate"
-datePublished: "2014-07-06"
+slug: go-and-grow-a-million-trees-goldenstate-of-koronadals-advocacy-in-the-preservation-of-our-mother-earth
+title: go and grow a million trees! goldenstate of koronadal’s advocacy in the preservation of our mother earth
+description: Goldenstate college of koronadal inc. on its 3rd straight year had again joined the city...
+author: Goldenstate
+date: 2014/07/06
 ---
 
 Goldenstate college of koronadal inc. on its 3rd straight year had again joined the city government of koronadal in its advocacy in creating a newer and greener landscape for the city, thus, taking part in the preservation of our environment and saving our mother earth.
