--- a/news/2014/09/04/1.mdx
+++ b/news/2014/09/04/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "general santos acquaintance party: a night of seemingly endless excitement"
-author: "Goldenstate"
-datePublished: "2014-09-04"
+slug: general-santos-acquaintance-party-a-night-of-seemingly-endless-excitement
+title: general santos acquaintance party: a night of seemingly endless excitement
+description: From the afternoon and well into the night, the atmosphere of this year’s acquaintance party...
+author: Goldenstate
+date: 2014/09/04
 ---
 
 From the afternoon and well into the night, the atmosphere of this year’s acquaintance party at the anchor driving range was electric with the collective excitement of students, staff, and honored guests. the level of enthusiasm lasted throughout the event, coming to a crescendo at certain points, but overall the buzz could be felt the entire night of august 15, 2014.
