--- a/news/2014/10/04/1.mdx
+++ b/news/2014/10/04/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "gsc honors its filipino language and culture with its celebration of buwan ng wikang pambansa"
-author: "Goldenstate"
-datePublished: "2014-10-04"
+slug: gsc-honors-its-filipino-language-and-culture-with-its-celebration-of-buwan-ng-wikang-pambansa
+title: gsc honors its filipino language and culture with its celebration of buwan ng wikang pambansa
+description: Every august, the country celebrates buwan ng wikang pambansa, highlighting our filipino language. the komisyon...
+author: Goldenstate
+date: 2014/10/04
 ---
 
 Every august, the country celebrates buwan ng wikang pambansa, highlighting our filipino language. the komisyon ng wikang filipino (kwf) announced that the theme for this year’s celebration would be ‘wikang filipino, wikang pagkakaisa’.
