--- a/news/2014/10/04/2.mdx
+++ b/news/2014/10/04/2.mdx
@@ -1,7 +1,9 @@
 ---
-title: "goldenstate works out its bodies (and minds) during intramurals 2014"
-author: "Goldenstate"
-datePublished: "2014-10-04"
+slug: goldenstate-works-out-its-bodies-and-minds-during-intramurals-2014
+title: goldenstate works out its bodies (and minds) during intramurals 2014
+description: Did you notice division 4 is once again the overall champion of intramurals 2014? i...
+author: Goldenstate
+date: 2014/10/04
 ---
 
 Did you notice division 4 is once again the overall champion of intramurals 2014? i hear sir. chris mordeno, the division’s adviser, musing about his students having to do their best to win in every activity that they will be participating, deploying all of the students that have the suitable talents and skills for the intramurals.
