--- a/news/2014/10/09/1.mdx
+++ b/news/2014/10/09/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "9th tuna skills olympics"
-author: "Goldenstate"
-datePublished: "2014-10-09"
+slug: 9th-tuna-skills-olympics
+title: 9th tuna skills olympics
+description: The tuna skills olympics sponsored by the goldenstate college inc. is one of the highlights...
+author: Goldenstate
+date: 2014/10/09
 ---
 
 The tuna skills olympics sponsored by the goldenstate college inc. is one of the highlights of the annual tuna festival celebrated in general santos city, the tuna capital of the philippines. this series of competitions provides schools from all over mindanao a competitive space to showcase their talents in various areas related to the hospitality industry.
