--- a/news/2014/12/07/1.mdx
+++ b/news/2014/12/07/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "goldenstate shines bright at christmastime with the light-a-tree countdown"
-author: "Goldenstate"
-datePublished: "2014-12-07"
+slug: goldenstate-shines-bright-at-christmastime-with-the-light-a-tree-countdown
+title: goldenstate shines bright at christmastime with the light-a-tree countdown
+description: The holiday season is in full swing, and before everyone goes back home to spend...
+author: Goldenstate
+date: 2014/12/07
 ---
 
 The holiday season is in full swing, and before everyone goes back home to spend christmas with family, goldenstate kicked off the month’s festivities on december 1 with the inaugural light-a-tree countdown celebration.
