--- a/news/2015/08/20/1.mdx
+++ b/news/2015/08/20/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "foamtastic fun at the #neon acquaintance party"
-author: "Goldenstate"
-datePublished: "2015-08-20"
+slug: foamtastic-fun-at-the-neon-acquaintance-party
+title: foamtastic fun at the #neon acquaintance party
+description: Year after year, the acquaintance party has been a fun way to cap off the...
+author: Goldenstate
+date: 2015/08/20
 ---
 
 Year after year, the acquaintance party has been a fun way to cap off the beginning of the goldenstate school year, and this year’s event was no different. on july 31, students, faculty, and honored guests converged upon the anchor driving range for food, music, and the enjoyment of each other’s company. however, this time around, things got a little bit messy the addition of tons and tons of foam!.
