--- a/news/2020/03/04/1.mdx
+++ b/news/2020/03/04/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "larong pinoy: traditional games from yesterday played by the youth of today"
-author: "Goldenstate"
-datePublished: "2020-03-04"
+slug: larong-pinoy-traditional-games-from-yesterday-played-by-the-youth-of-today
+title: larong pinoy: traditional games from yesterday played by the youth of today
+description: I am one example of a filipino whose formative years were not all about psp...
+author: Goldenstate
+date: 2020/03/04
 ---
 
 I am one example of a filipino whose formative years were not all about psp and game apps on tablets; i grew up with games played outside of the confines of our house. i grew up with games with lots of interaction with friends, family, and neighbors.
