--- a/news/2020/03/09/5.mdx
+++ b/news/2020/03/09/5.mdx
@@ -1,7 +1,9 @@
 ---
-title: "cake decorating contest hrm skills 2020"
-author: "Goldenstate"
-datePublished: "2020-03-09"
+slug: cake-decorating-contest-hrm-skills-2020
+title: cake decorating contest hrm skills 2020
+description: Candied, flossy, and luscious! these fondant cakes made by our hrm students reminds us that...
+author: Goldenstate
+date: 2020/03/09
 ---
 
 Candied, flossy, and luscious! these fondant cakes made by our hrm students reminds us that even if it looks fancy and lavish, but through an adroit hands it turns into an extravagant and elegant masterpiece! who says they can’t achieve those alluring cakes with reasonable piece?.
