--- a/news/2020/03/09/6.mdx
+++ b/news/2020/03/09/6.mdx
@@ -1,7 +1,9 @@
 ---
-title: "international immersion program"
-author: "Goldenstate"
-datePublished: "2020-03-09"
+slug: international-immersion-program
+title: international immersion program
+description: International immersion program: preparing our future educators for better employment opportunities.
+author: Goldenstate
+date: 2020/03/09
 ---
 
 International immersion program: preparing our future educators for better employment opportunities.
