--- a/news/2020/09/22/1.mdx
+++ b/news/2020/09/22/1.mdx
@@ -1,5 +1,7 @@
 ---
-title: "goldenstate college infocast"
-author: "Goldenstate"
-datePublished: "2020-09-22"
+slug: goldenstate-college-infocast
+title: goldenstate college infocast
+description: 
+author: Goldenstate
+date: 2020/09/22
 ---
