--- a/news/2021/07/30/1.mdx
+++ b/news/2021/07/30/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "updated directory for first semester sy: 2021-2022"
-author: "Goldenstate"
-datePublished: "2021-07-30"
+slug: updated-directory-for-first-semester-sy-2021-2022
+title: updated directory for first semester sy: 2021-2022
+description: Heads up goldenians! updated directory for first semester sy: 2021-2022.
+author: Goldenstate
+date: 2021/07/30
 ---
 
 Heads up goldenians! updated directory for first semester sy: 2021-2022.
