--- a/news/2022/11/23/5.mdx
+++ b/news/2022/11/23/5.mdx
@@ -1,5 +1,7 @@
 ---
-title: "graduation 2020-2021"
-author: "Goldenstate"
-datePublished: "2022-11-23"
+slug: graduation-2020-2021
+title: graduation 2020-2021
+description: 
+author: Goldenstate
+date: 2022/11/23
 ---
