--- a/news/2023/08/19/2.mdx
+++ b/news/2023/08/19/2.mdx
@@ -1,7 +1,9 @@
 ---
-title: "goldenstate college – gen. santos sponsors kapehan sa kalilangan 2023"
-author: "Jwill"
-datePublished: "2023-08-19"
+slug: goldenstate-college-gen-santos-sponsors-kapehan-sa-kalilangan-2023
+title: goldenstate college – gen. santos sponsors kapehan sa kalilangan 2023
+description: Being one of the sponsors in the kapehan sa kalilangan 2023, goldenstate college offers breads,...
+author: Jwill
+date: 2023/08/19
 ---
 
 Being one of the sponsors in the kapehan sa kalilangan 2023, goldenstate college offers breads, kakanins and coffee to the participants of the parada ng lahi.
