--- a/news/2023/08/19/3.mdx
+++ b/news/2023/08/19/3.mdx
@@ -1,7 +1,9 @@
 ---
-title: "happy to be with our guest artist wilbert ross"
-author: "Jwill"
-datePublished: "2023-08-19"
+slug: happy-to-be-with-our-guest-artist-wilbert-ross
+title: happy to be with our guest artist wilbert ross
+description: Happy to be with our guest artist #wilbertross during our college week 2023. have a...
+author: Jwill
+date: 2023/08/19
 ---
 
 Happy to be with our guest artist #wilbertross during our college week 2023. have a memotable and enjoyable celebration goldenians.
