--- a/news/2023/08/19/5.mdx
+++ b/news/2023/08/19/5.mdx
@@ -1,7 +1,9 @@
 ---
-title: "goldenstate college of gensan senior high school department enrollment is now open"
-author: "Jwill"
-datePublished: "2023-08-19"
+slug: goldenstate-college-of-gensan-senior-high-school-department-enrollment-is-now-open
+title: goldenstate college of gensan senior high school department enrollment is now open
+description: Look goldenstate college of gensan senior high school department enrollment is now open, for school...
+author: Jwill
+date: 2023/08/19
 ---
 
 Look goldenstate college of gensan senior high school department enrollment is now open, for school year 2023-2024.
