--- a/news/2023/10/16/1.mdx
+++ b/news/2023/10/16/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "elementary and high school competition – tuna skills olympics 2023"
-author: "Goldenstate"
-datePublished: "2023-10-16"
+slug: elementary-and-high-school-competition-tuna-skills-olympics-2023
+title: elementary and high school competition – tuna skills olympics 2023
+description: The goldenstate college in cooperation with the local government unit of general santos city and...
+author: Goldenstate
+date: 2023/10/16
 ---
 
 The goldenstate college in cooperation with the local government unit of general santos city and tuna festival council staged again the 16th tuna festival skills olympics 2023 held on september 1, 2023 at the veranza mall, general santos city.
