--- a/news/2023/10/16/2.mdx
+++ b/news/2023/10/16/2.mdx
@@ -1,7 +1,9 @@
 ---
-title: "college category – september 2, 2023 (tuna skills olympics 2023)"
-author: "Goldenstate"
-datePublished: "2023-10-16"
+slug: college-category-september-2-2023-tuna-skills-olympics-2023
+title: college category – september 2, 2023 (tuna skills olympics 2023)
+description: The college category of the 16th tuna festival skills olympics 2023 was held on september...
+author: Goldenstate
+date: 2023/10/16
 ---
 
 The college category of the 16th tuna festival skills olympics 2023 was held on september 2, 2023 at the veranza mall, general santos city. the event was supported and funded by the local government unit of general santos city, the tuna festival council and goldenstate college as the host institution.
