--- a/news/2023/11/18/1.mdx
+++ b/news/2023/11/18/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "message of gratitude of goldenstate college"
-author: "Goldenstate"
-datePublished: "2023-11-18"
+slug: message-of-gratitude-of-goldenstate-college
+title: message of gratitude of goldenstate college
+description: On behalf of the students, faculty, and staff and administration of goldenstate college, we would...
+author: Goldenstate
+date: 2023/11/18
 ---
 
 On behalf of the students, faculty, and staff and administration of goldenstate college, we would like to express our deepest gratitude to the officials of general santos city headed by mayor lorelie pacquiao, sanggunian panglungsod thru vice mayor lita nunez, pnp, afp reservists, jorge royeca hospital, soccsargen hospital, brgy capt. jaime tatad, and staff of barangay lagao for the invaluable assistance and support extended to our institution during the time of need.
