--- a/news/2023/11/26/1.mdx
+++ b/news/2023/11/26/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "goldenstate college intramural meet 2023: a celebration of unity, talent, and sportsmanship"
-author: "Goldenstate"
-datePublished: "2023-11-26"
+slug: goldenstate-college-intramural-meet-2023-a-celebration-of-unity-talent-and-sportsmanship
+title: goldenstate college intramural meet 2023: a celebration of unity, talent, and sportsmanship
+description: In a dazzling showcase of athletic prowess and school spirit, goldenstate college general santos city...
+author: Goldenstate
+date: 2023/11/26
 ---
 
 In a dazzling showcase of athletic prowess and school spirit, goldenstate college general santos city campus hosted its much-anticipated intramural meet 2023. the event, held from november 13 to 17, brought together students, faculty, and staff in a week-long celebration of camaraderie and friendly competition.
