--- a/news/2024/01/23/4.mdx
+++ b/news/2024/01/23/4.mdx
@@ -1,7 +1,9 @@
 ---
-title: "christmas for a cause program 2023 of goldenstate college in partnership with cmfc gensan at barangay san jose"
-author: "Goldenstate"
-datePublished: "2024-01-23"
+slug: christmas-for-a-cause-program-2023-of-goldenstate-college-in-partnership-with-cmfc-gensan-at-barangay-san-jose
+title: christmas for a cause program 2023 of goldenstate college in partnership with cmfc gensan at barangay san jose
+description: The christmas for a cause program of the goldenstate college headed by dr. warren a....
+author: Goldenstate
+date: 2024/01/23
 ---
 
 The christmas for a cause program of the goldenstate college headed by dr. warren a. manilay in partnership with city mobile force company headed by plt col ma joyce birrey on december 23, 2023 at purok riverside and purok sto. nino, barangay san jose.
