--- a/news/2024/01/23/5.mdx
+++ b/news/2024/01/23/5.mdx
@@ -1,7 +1,9 @@
 ---
-title: "enhancing inclusive education: insights from a special education expert"
-author: "Goldenstate"
-datePublished: "2024-01-23"
+slug: enhancing-inclusive-education-insights-from-a-special-education-expert
+title: enhancing inclusive education: insights from a special education expert
+description: In a recent seminar that resonated with educators dr. julius animas bernal jr. illuminated innovative...
+author: Goldenstate
+date: 2024/01/23
 ---
 
 In a recent seminar that resonated with educators dr. julius animas bernal jr. illuminated innovative strategies and techniques for handling students with support needs in an inclusive classroom setting.
