--- a/news/2024/01/31/1.mdx
+++ b/news/2024/01/31/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "quipper sparks joy: a memorable visit enriches school’s pet day celebration"
-author: "Goldenstate"
-datePublished: "2024-01-31"
+slug: quipper-sparks-joy-a-memorable-visit-enriches-schools-pet-day-celebration
+title: quipper sparks joy: a memorable visit enriches school’s pet day celebration
+description: Ms. maia higashi, from japan and the head of business operations and strategy of quipper...
+author: Goldenstate
+date: 2024/01/31
 ---
 
 Ms. maia higashi, from japan and the head of business operations and strategy of quipper philippines, and his team brought joy to the school community during the pet day celebration. engaging with enthusiasm, she interacted with the children, fostering a memorable experience.
