--- a/news/2024/04/03/1.mdx
+++ b/news/2024/04/03/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "goldenstate college hosts 20th jobs fair and symposium"
-author: "Goldenstate"
-datePublished: "2024-04-03"
+slug: goldenstate-college-hosts-20th-jobs-fair-and-symposium
+title: goldenstate college hosts 20th jobs fair and symposium
+description: The 20th jobs fair and symposium, organized by goldenstate college, was a resounding success held...
+author: Goldenstate
+date: 2024/04/03
 ---
 
 The 20th jobs fair and symposium, organized by goldenstate college, was a resounding success held on march 22, 2024 at veranza activity center, veranza mall, general santos city. this annual event brought together job seekers and various companies from different industries to provide employment opportunities to the people of the city. with over 83 participating companies and a diverse range of job positions available, the event drew a large crowd of eager and motivated individuals looking for their next career opportunity. the symposium of the event also proved to be informative and insightful, with speakers from successful companies and government agencies sharing their knowledge and experience on the current job market trends. the event not only provided job opportunities but also served as a platform for networking and building connections. goldenstate college once again proved its commitment to bridging the gap between job seekers and employers, making a positive impact on the community and contributing to the economic growth of the city.
