--- a/news/2024/08/29/1.mdx
+++ b/news/2024/08/29/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "jhs students, bsp & gsp planting activity"
-author: "Goldenstate"
-datePublished: "2024-08-29"
+slug: jhs-students-bsp-gsp-planting-activity
+title: jhs students, bsp & gsp planting activity
+description: In the celebration of national heroes day, junior high school students, bsp and gsp actively...
+author: Goldenstate
+date: 2024/08/29
 ---
 
 In the celebration of national heroes day, junior high school students, bsp and gsp actively participated in a planting initiative, demonstrating their commitment to environmental conservation conducted last august 23, 2024 at glc.
