--- a/news/2024/08/29/2.mdx
+++ b/news/2024/08/29/2.mdx
@@ -1,7 +1,9 @@
 ---
-title: "project a.c.c.e.s.s. launched at goldenstate college"
-author: "Goldenstate"
-datePublished: "2024-08-29"
+slug: project-access-launched-at-goldenstate-college
+title: project a.c.c.e.s.s. launched at goldenstate college
+description: The regional anti- cybercrime unit 12 (racu) conducted a seminar on project a.c.c.e.s.s. (awareness through...
+author: Goldenstate
+date: 2024/08/29
 ---
 
 The regional anti- cybercrime unit 12 (racu) conducted a seminar on project a.c.c.e.s.s. (awareness through cybercrime education: towards a safer online world) for the students of goldenstate college of koronadal held at kcc mall of marbel events center last thursday, august 22, 2024.
