--- a/news/2024/10/18/1.mdx
+++ b/news/2024/10/18/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "first aid basic training"
-author: "Goldenstate"
-datePublished: "2024-10-18"
+slug: first-aid-basic-training
+title: first aid basic training
+description: “together, we serve: bsp and gsp scouts training for first aid skills.”.
+author: Goldenstate
+date: 2024/10/18
 ---
 
 “together, we serve: bsp and gsp scouts training for first aid skills.”.
