--- a/news/2024/10/18/3.mdx
+++ b/news/2024/10/18/3.mdx
@@ -1,7 +1,9 @@
 ---
-title: "8th pin investiture, white coat and pinning ceremony"
-author: "Goldenstate"
-datePublished: "2024-10-18"
+slug: 8th-pin-investiture-white-coat-and-pinning-ceremony
+title: 8th pin investiture, white coat and pinning ceremony
+description: Today marks a significant milestone as we don our white coats and pins, symbolizing our...
+author: Goldenstate
+date: 2024/10/18
 ---
 
 Today marks a significant milestone as we don our white coats and pins, symbolizing our commitment to excellence in pharmacy. excited to delve into this journey of knowledge and service!.
