--- a/news/2024/10/18/4.mdx
+++ b/news/2024/10/18/4.mdx
@@ -1,7 +1,9 @@
 ---
-title: "celebrating teacher’s day is a wonderful opportunity for faculty and staff"
-author: "Goldenstate"
-datePublished: "2024-10-18"
+slug: celebrating-teachers-day-is-a-wonderful-opportunity-for-faculty-and-staff
+title: celebrating teacher’s day is a wonderful opportunity for faculty and staff
+description: Celebrating teacher’s day is a wonderful opportunity for faculty and staff to show appreciation for...
+author: Goldenstate
+date: 2024/10/18
 ---
 
 Celebrating teacher’s day is a wonderful opportunity for faculty and staff to show appreciation for the hard work and dedication of teachers.
