--- a/news/2024/10/18/5.mdx
+++ b/news/2024/10/18/5.mdx
@@ -1,7 +1,9 @@
 ---
-title: "the charity that is a trifle to us can be precious to others."
-author: "Goldenstate"
-datePublished: "2024-10-18"
+slug: the-charity-that-is-a-trifle-to-us-can-be-precious-to-others
+title: the charity that is a trifle to us can be precious to others.
+description: “the charity that is a trifle to us can be precious to others.”.
+author: Goldenstate
+date: 2024/10/18
 ---
 
 “the charity that is a trifle to us can be precious to others.”.
