--- a/news/2024/10/18/6.mdx
+++ b/news/2024/10/18/6.mdx
@@ -1,7 +1,9 @@
 ---
-title: "engaging in a transformative benchmarking experience in japan!"
-author: "Goldenstate"
-datePublished: "2024-10-18"
+slug: engaging-in-a-transformative-benchmarking-experience-in-japan
+title: engaging in a transformative benchmarking experience in japan!
+description: Engaging in a transformative benchmarking experience in japan!.
+author: Goldenstate
+date: 2024/10/18
 ---
 
 Engaging in a transformative benchmarking experience in japan!.
