--- a/news/2024/10/18/8.mdx
+++ b/news/2024/10/18/8.mdx
@@ -1,7 +1,9 @@
 ---
-title: "mastering the art of tourism"
-author: "Goldenstate"
-datePublished: "2024-10-18"
+slug: mastering-the-art-of-tourism
+title: mastering the art of tourism
+description: The recently concluded bs tourism management seminar and workshop 2024 was an inspiring, morally-uplifting and...
+author: Goldenstate
+date: 2024/10/18
 ---
 
 The recently concluded bs tourism management seminar and workshop 2024 was an inspiring, morally-uplifting and informative event that aimed to equip the next generation of tourism professionals with innovative skills and knowledge.
