--- a/news/2024/10/18/9.mdx
+++ b/news/2024/10/18/9.mdx
@@ -1,7 +1,9 @@
 ---
-title: "campus caravan tourism & peace forum"
-author: "Goldenstate"
-datePublished: "2024-10-18"
+slug: campus-caravan-tourism-peace-forum
+title: campus caravan tourism & peace forum
+description: The campus caravan tourism initiative, alongside the peace forum, offers a unique platform to promote...
+author: Goldenstate
+date: 2024/10/18
 ---
 
 The campus caravan tourism initiative, alongside the peace forum, offers a unique platform to promote cultural exchange, tourism, and community building among students and local communities. this article explores how these initiatives foster peace, understanding, and sustainable tourism.
