--- a/news/2024/11/21/1.mdx
+++ b/news/2024/11/21/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "congratulations to our newly licensed midwives"
-author: "Goldenstate"
-datePublished: "2024-11-21"
+slug: congratulations-to-our-newly-licensed-midwives
+title: congratulations to our newly licensed midwives
+description: Congratulations to our newly licensed midwives for their outstanding achievement in the licensure examination for...
+author: Goldenstate
+date: 2024/11/21
 ---
 
 Congratulations to our newly licensed midwives for their outstanding achievement in the licensure examination for midwives held last november 15-16, 2024, achieving an impressive 91% passing rate, and 78.7% national passing rate!.
