--- a/news/2025/01/28/1.mdx
+++ b/news/2025/01/28/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "cbm tindahan 2024: a resounding success!"
-author: "Goldenstate"
-datePublished: "2025-01-28"
+slug: cbm-tindahan-2024-a-resounding-success
+title: cbm tindahan 2024: a resounding success!
+description: The bsba marketing management students proudly showcased their entrepreneurial skills during the cbm tindahan 2024,...
+author: Goldenstate
+date: 2025/01/28
 ---
 
 The bsba marketing management students proudly showcased their entrepreneurial skills during the cbm tindahan 2024, held from november 5-8, 2024, as part of the gsck intramurals 2024 at the south cotabato sports complex.
