--- a/news/2025/01/28/11.mdx
+++ b/news/2025/01/28/11.mdx
@@ -1,7 +1,9 @@
 ---
-title: "look: the manilay’s christmas gift-giving"
-author: "Goldenstate"
-datePublished: "2025-01-28"
+slug: look-the-manilays-christmas-gift-giving
+title: look: the manilay’s christmas gift-giving
+description: Leading the meaningful initiative by the goldenstate college vice president dr. sara t. manilay and...
+author: Goldenstate
+date: 2025/01/28
 ---
 
 Leading the meaningful initiative by the goldenstate college vice president dr. sara t. manilay and the manilay family.
