--- a/news/2025/01/28/13.mdx
+++ b/news/2025/01/28/13.mdx
@@ -1,7 +1,9 @@
 ---
-title: "success story alert!"
-author: "Goldenstate"
-datePublished: "2025-01-28"
+slug: success-story-alert
+title: success story alert!
+description: From goldenstate to global success.
+author: Goldenstate
+date: 2025/01/28
 ---
 
 From goldenstate to global success.
