--- a/news/2025/01/28/14.mdx
+++ b/news/2025/01/28/14.mdx
@@ -1,7 +1,9 @@
 ---
-title: "hism celebrates 41st anniversary with joyful festivities"
-author: "Goldenstate"
-datePublished: "2025-01-28"
+slug: hism-celebrates-41st-anniversary-with-joyful-festivities
+title: hism celebrates 41st anniversary with joyful festivities
+description: Holy infant school of malungon (hism), an affiliate institution of goldenstate college, marked its 41st...
+author: Goldenstate
+date: 2025/01/28
 ---
 
 Holy infant school of malungon (hism), an affiliate institution of goldenstate college, marked its 41st anniversary on january 15, 2025 with a vibrant celebration filled with faith, culture, and family spirit. the festivities, which took place at the school grounds in malungon, sarangani, kicked off with a heartfelt holy mass to honor the school’s longstanding commitment to education and community.
