--- a/news/2025/01/28/3.mdx
+++ b/news/2025/01/28/3.mdx
@@ -1,7 +1,9 @@
 ---
-title: "frame the future: capturing moments, crafting digital presence"
-author: "Goldenstate"
-datePublished: "2025-01-28"
+slug: frame-the-future-capturing-moments-crafting-digital-presence
+title: frame the future: capturing moments, crafting digital presence
+description: The students of the college of business and management (cbm) department actively participated in a...
+author: Goldenstate
+date: 2025/01/28
 ---
 
 The students of the college of business and management (cbm) department actively participated in a 1-day seminar and workshop on photography that was led by sir gerald gulmatico ruplo, mit, where he discussed basic information and things to consider and remember about the world of photography and digital marketing.
