--- a/news/2025/01/28/5.mdx
+++ b/news/2025/01/28/5.mdx
@@ -1,7 +1,9 @@
 ---
-title: "development of city of koronadal—creative industry development plan (ck-cidp) workshop"
-author: "Goldenstate"
-datePublished: "2025-01-28"
+slug: development-of-city-of-koronadalcreative-industry-development-plan-ck-cidp-workshop
+title: development of city of koronadal—creative industry development plan (ck-cidp) workshop
+description: Photos taken during the participation of the selected students of goldenstate college of koronadal, together...
+author: Goldenstate
+date: 2025/01/28
 ---
 
 Photos taken during the participation of the selected students of goldenstate college of koronadal, together with sir aj bryant jalando-on and sir reyn heart floro, in the “development of city of koronadal—creative industry development plan (ck-cidp) workshop” held this december 4-6, 2024, at paraiso verde resort and waterpark.
