--- a/news/2025/01/28/7.mdx
+++ b/news/2025/01/28/7.mdx
@@ -1,7 +1,9 @@
 ---
-title: "goldenstate college delegates shine at international research conference in vietnam"
-author: "Goldenstate"
-datePublished: "2025-01-28"
+slug: goldenstate-college-delegates-shine-at-international-research-conference-in-vietnam
+title: goldenstate college delegates shine at international research conference in vietnam
+description: Goldenstate college made its mark on the global academic stage during the international multidisciplinary research...
+author: Goldenstate
+date: 2025/01/28
 ---
 
 Goldenstate college made its mark on the global academic stage during the international multidisciplinary research conference, held on december 5–6, 2024, in ho chi minh city, vietnam. this prestigious event brought together experts from diverse fields—scholars, researchers, and educators—to share groundbreaking ideas, innovations, and research findings.
