--- a/news/2025/01/28/9.mdx
+++ b/news/2025/01/28/9.mdx
@@ -1,7 +1,9 @@
 ---
-title: "goldenstate college shines at the 6th multidisciplinary conference for awards and research"
-author: "Goldenstate"
-datePublished: "2025-01-28"
+slug: goldenstate-college-shines-at-the-6th-multidisciplinary-conference-for-awards-and-research
+title: goldenstate college shines at the 6th multidisciplinary conference for awards and research
+description: Goldenstate college has once again proven its commitment to excellence in education and research, emerging...
+author: Goldenstate
+date: 2025/01/28
 ---
 
 Goldenstate college has once again proven its commitment to excellence in education and research, emerging victorious at the prestigious 6th multidisciplinary conference for awards and research held in ho chi minh city, vietnam.
