--- a/news/2025/06/10/1.mdx
+++ b/news/2025/06/10/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "hrm skills olympics 2025 : a day of culinary and hospitality excellence"
-author: "Goldenstate"
-datePublished: "2025-06-10"
+slug: hrm-skills-olympics-2025-a-day-of-culinary-and-hospitality-excellence
+title: hrm skills olympics 2025 : a day of culinary and hospitality excellence
+description: The veranza activity center in veranza mall in general santos city came alive with excitement...
+author: Goldenstate
+date: 2025/06/10
 ---
 
 The veranza activity center in veranza mall in general santos city came alive with excitement and competitive spirit as the hrm skills olympics 2025 unfolded on march 8, 2025. the one-day event, showcasing the best of hospitality and culinary skills, brought together aspiring professionals from various schools to compete in a series of challenging and creative competitions.
