--- a/news/2025/06/10/3.mdx
+++ b/news/2025/06/10/3.mdx
@@ -1,7 +1,9 @@
 ---
-title: "goldenstate college holds 33rd commencement exercises"
-author: "Goldenstate"
-datePublished: "2025-06-10"
+slug: goldenstate-college-holds-33rd-commencement-exercises
+title: goldenstate college holds 33rd commencement exercises
+description: Goldenstate college – general santos city proudly held its 33rd commencement exercises on may 7,...
+author: Goldenstate
+date: 2025/06/10
 ---
 
 Goldenstate college – general santos city proudly held its 33rd commencement exercises on may 7, 2025, at 4:00 pm at its lagao campus, marking a significant milestone for hundreds of graduates and their families.
