--- a/news/2020/03/09/3.mdx
+++ b/news/2020/03/09/3.mdx
@@ -1,7 +1,9 @@
 ---
-title: "criminology students of goldenstate college"
-author: "Goldenstate"
-datePublished: "2020-03-09"
+slug: criminology-students-of-goldenstate-college
+title: criminology students of goldenstate college
+description: Applause! to these criminology students of goldenstate college our future police officers bearing with courage,...
+author: Goldenstate
+date: 2020/03/09
 ---
 
 Applause! to these criminology students of goldenstate college our future police officers bearing with courage, dedication and boldness. ‘kudos’ to them our activity area is peaceful and in order.
