--- a/news/2021/07/30/2.mdx
+++ b/news/2021/07/30/2.mdx
@@ -1,7 +1,9 @@
 ---
-title: "watch out for our enrollment caravan"
-author: "Goldenstate"
-datePublished: "2021-07-30"
+slug: watch-out-for-our-enrollment-caravan
+title: watch out for our enrollment caravan
+description: Watch out for our enrollment caravan live 91.1 pacman radio- gensan on june 26, 2021...
+author: Goldenstate
+date: 2021/07/30
 ---
 
 Watch out for our enrollment caravan live 91.1 pacman radio- gensan on june 26, 2021 from 1:00-5:00pm.listen for our scholarship programs, courses offered, enrollment requirements of goldenstate college.
