--- a/news/2021/07/30/3.mdx
+++ b/news/2021/07/30/3.mdx
@@ -1,7 +1,9 @@
 ---
-title: "certificate of appreciation is hereby awarded to dr. sara jane t. manilay"
-author: "Goldenstate"
-datePublished: "2021-07-30"
+slug: certificate-of-appreciation-is-hereby-awarded-to-dr-sara-jane-t-manilay
+title: certificate of appreciation is hereby awarded to dr. sara jane t. manilay
+description: Certificate of appreciation is hereby awarded to dr. sara jane t. manilay in recognition of...
+author: Goldenstate
+date: 2021/07/30
 ---
 
 Certificate of appreciation is hereby awarded to dr. sara jane t. manilay in recognition of her unwavering support to help the philippine national police particulary the laguna police provincial office (llpo), brgy. bagumbayan sta. cruz, laguna in camp development project in relation to the intensified cleanliness policy of pnp.
