--- a/news/2022/11/23/1.mdx
+++ b/news/2022/11/23/1.mdx
@@ -1,5 +1,7 @@
 ---
-title: "hm skills 15th tuna college"
-author: "Goldenstate"
-datePublished: "2022-11-23"
+slug: hm-skills-15th-tuna-college
+title: hm skills 15th tuna college
+description: 
+author: Goldenstate
+date: 2022/11/23
 ---
