--- a/news/2022/11/23/3.mdx
+++ b/news/2022/11/23/3.mdx
@@ -1,5 +1,7 @@
 ---
-title: "intrams parade 2022"
-author: "Goldenstate"
-datePublished: "2022-11-23"
+slug: intrams-parade-2022
+title: intrams parade 2022
+description: 
+author: Goldenstate
+date: 2022/11/23
 ---
