--- a/news/2022/11/23/4.mdx
+++ b/news/2022/11/23/4.mdx
@@ -1,5 +1,7 @@
 ---
-title: "mr & ms goldenstate college 2022"
-author: "Goldenstate"
-datePublished: "2022-11-23"
+slug: mr-ms-goldenstate-college-2022
+title: mr & ms goldenstate college 2022
+description: 
+author: Goldenstate
+date: 2022/11/23
 ---
