--- a/news/2023/08/19/1.mdx
+++ b/news/2023/08/19/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "goldenstate college participates parada ng lahi"
-author: "Jwill"
-datePublished: "2023-08-19"
+slug: goldenstate-college-participates-parada-ng-lahi
+title: goldenstate college participates parada ng lahi
+description: In time with the celebration of kalilangan festival 2023, the goldenstate college general santos city...
+author: Jwill
+date: 2023/08/19
 ---
 
 In time with the celebration of kalilangan festival 2023, the goldenstate college general santos city participated in the parada ng lahi on february 27, 2023.
