--- a/news/2023/08/19/4.mdx
+++ b/news/2023/08/19/4.mdx
@@ -1,7 +1,9 @@
 ---
-title: "dr. john ralph manilay, joined the regional office 12 during the launching of h.e.a.r.t"
-author: "Jwill"
-datePublished: "2023-08-19"
+slug: dr-john-ralph-manilay-joined-the-regional-office-12-during-the-launching-of-heart
+title: dr. john ralph manilay, joined the regional office 12 during the launching of h.e.a.r.t
+description: Our very own head for development office dr. john ralph manilay, joined the regional office...
+author: Jwill
+date: 2023/08/19
 ---
 
 Our very own head for development office dr. john ralph manilay, joined the regional office 12 during the launching of h.e.a.r.t or health and emergency assistance for rehabilation training last monday, oct 24, 2022.
