--- a/news/2023/08/19/7.mdx
+++ b/news/2023/08/19/7.mdx
@@ -1,7 +1,9 @@
 ---
-title: "enrollment for school year 2023-2024 is now going-on"
-author: "Jwill"
-datePublished: "2023-08-19"
+slug: enrollment-for-school-year-2023-2024-is-now-going-on
+title: enrollment for school year 2023-2024 is now going-on
+description: Enrollment for school year 2023-2024 is now going-on. classes will start on august 23, 2023.
+author: Jwill
+date: 2023/08/19
 ---
 
 Enrollment for school year 2023-2024 is now going-on. classes will start on august 23, 2023.
