--- a/news/2023/08/19/8.mdx
+++ b/news/2023/08/19/8.mdx
@@ -1,7 +1,9 @@
 ---
-title: "dr. sara jane t. manilay vice president for finance received an award"
-author: "Jwill"
-datePublished: "2023-08-19"
+slug: dr-sara-jane-t-manilay-vice-president-for-finance-received-an-award
+title: dr. sara jane t. manilay vice president for finance received an award
+description: Just in dr. sara jane t. manilay vice president for finance, of goldenstate college.
+author: Jwill
+date: 2023/08/19
 ---
 
 Just in dr. sara jane t. manilay vice president for finance, of goldenstate college.
