--- a/news/2024/10/18/2.mdx
+++ b/news/2024/10/18/2.mdx
@@ -1,7 +1,9 @@
 ---
-title: "students celebrate teachers’ day with heartfelt appreciation"
-author: "Goldenstate"
-datePublished: "2024-10-18"
+slug: students-celebrate-teachers-day-with-heartfelt-appreciation
+title: students celebrate teachers’ day with heartfelt appreciation
+description: On october 4, 2024, students gathered to honor their teachers in a meaningful teachers’ day...
+author: Goldenstate
+date: 2024/10/18
 ---
 
 On october 4, 2024, students gathered to honor their teachers in a meaningful teachers’ day celebration at glc. each grade level prepared special messages, presented flowers, and offered tokens of appreciation to express their gratitude for the dedication and support of their educators.
