--- a/news/2024/10/18/7.mdx
+++ b/news/2024/10/18/7.mdx
@@ -1,7 +1,9 @@
 ---
-title: "bstm departmental seminar and workshop"
-author: "Goldenstate"
-datePublished: "2024-10-18"
+slug: bstm-departmental-seminar-and-workshop
+title: bstm departmental seminar and workshop
+description: Photos taken during the second part of the bstm departmental seminar and workshop, wherein the...
+author: Goldenstate
+date: 2024/10/18
 ---
 
 Photos taken during the second part of the bstm departmental seminar and workshop, wherein the gsck – bstm students actively participated in the different engaging activities that showcased their intelligence, unity and competitive side.
