--- a/news/2024/10/29/1.mdx
+++ b/news/2024/10/29/1.mdx
@@ -1,7 +1,9 @@
 ---
-title: "moa signing solidifies partnership for community development and education"
-author: "Goldenstate"
-datePublished: "2024-10-29"
+slug: moa-signing-solidifies-partnership-for-community-development-and-education
+title: moa signing solidifies partnership for community development and education
+description: A memorandum of agreement (moa) was signed on october 23, 2024 at 10:00 am, marking...
+author: Goldenstate
+date: 2024/10/29
 ---
 
 A memorandum of agreement (moa) was signed on october 23, 2024 at 10:00 am, marking a significant collaboration between the philippine military academy alumni association, inc. (pmaai) matutum chapter, task force gensan, and goldenstate college. the signing ceremony took place at the headquarters of task force gensan, symbolizing a unified commitment to fostering community development, education, and security in the region.
