--- a/news/2025/01/28/8.mdx
+++ b/news/2025/01/28/8.mdx
@@ -1,7 +1,9 @@
 ---
-title: "goldenstate college goes international: building partnerships in education."
-author: "Goldenstate"
-datePublished: "2025-01-28"
+slug: goldenstate-college-goes-international-building-partnerships-in-education
+title: goldenstate college goes international: building partnerships in education.
+description: To promote international collaborations in education, goldenstate college and beyond books publication signed a ceremonial...
+author: Goldenstate
+date: 2025/01/28
 ---
 
 To promote international collaborations in education, goldenstate college and beyond books publication signed a ceremonial memorandum of understanding on december 5, 2024, formally establishing their partnership. the event was held at bach viet polytechnic located at the center of ho chi minh city, vietman.
