--- a/news/2013/10/20/001.mdx
+++ b/news/2013/10/20/001.mdx
@@ -1,51 +1,103 @@
 ---
 slug: "goldenstate-intrams-13-more-successful-and-dazzling-than-ever"
-title: "goldenstate intrams ’13: more successful and dazzling than ever"
-description: "General santos city – it was a picture of almost perfect execution, ornamented with beauty,..."
+title: "Goldenstate Intrams ’13: More Successful and Dazzling Than Ever"
+description: "General Santos City – it was a picture of almost perfect execution, ornamented with beauty, agility, humility, and magnanimity..."
 author: "Goldenstate"
 date: "2013/10/20"
 ---
 
-General santos city – it was a picture of almost perfect execution, ornamented with beauty, agility, humility, and magnanimity. this is how the recently concluded college intramurals of goldenstate college-general santos went to happen.
 
-The semestral-ending activity was held on september 23-27, 2013 at the general santos city sports complex and at the trade hall of sm city gensan respectively. chaired by no less than mr. john ralph t. manilay, development office head of the school, the five-day event was divided into two phases: sports activity (september 23-25 at sports complex) and the literary-musical events with mr. & miss goldenstate pageant (september 26-27 at sm city trade hall).
+# Goldenstate Intrams ’13: More Successful and Dazzling Than Ever
 
-This year, there are only four divisions which competed in the sporting and non-sporting events (excluding goldenstate college-koronadal city which was the division 5 last year). these are the division 1 composed of students taking up hrm course; division 2 consisting of students from computer hardware servicing nc ii (chs), bachelor of science in information technology (bsit), and associate in computer technology (act); division 3 composed of the students coming from bachelor of science in tourism (bst), consumer electronics servicing nc ii (ces), two-year midwifery, two-year pharmacy, bachelor of science in pharmacy (bs pharm), and automotive servicing nc ii, and the division 4 composed of students from the bachelor of science in hotel and restaurant management (bshrm).
+**GENERAL SANTOS CITY — Goldenstate College–Gensan wrapped up its five-day Intramurals 2013 with vibrant energy and unforgettable memories, marking one of the most dynamic celebrations in school history. Division 4 (BSHRM) emerged as overall champion, sweeping both sporting and pageant categories.**
 
-More grandiose than before, the opening salvo on day 1 saw the colorful and festive mood of the atmosphere at the sports complex as all divisions paraded their stuffs, their cheerdancers accompanied by their division advisers, and athletes. it was a day full of hurrahs and yells so loud that it almost deafened an ordinary man’s ear especially when the highly anticipated cheerdance competition was showcased. other competitions set in the morning of day 1 were the t-shirts design (won by division 3), banner raising (won by division 3), banner design (won by division 4), parade (won by division 4), and cheerdance (won by division 3). in the afternoon of the same day was the commencement of the different ball games such as softball women, basketball (m/w), athletics, sepak takraw, volleyball (m/w), chess (m/w), dart (m/w), table tennis (m/w), soccer football (m), among others.
+Held from **September 23–27, 2013**, the annual semestral event took place at the **General Santos City Sports Complex** and **SM City Gensan Trade Hall**, blending intense competition with colorful showcases of talent, intellect, and school pride.
 
-Day two was witnessed by the continuation of the ballgames plus the energetic and fun some hosting craft of madam josie and sir allan to entertain the crowd as well as to announce the event results every now and then. the day ended with the marathon participated by all the members of the faculty and staff led by ceo dr. warren a. manilay, mnsa.
+---
 
-Equally important too, was the conclusion of the ballgames on day three with a big bang as a large gathering of crowd composed of all the students present, faculty members, staff, and the working students did the synchronized dancing in the tune of the zumba. it was the biggest attended zumba dance craze in recent history of goldenstate college.
+## 🏅 Highlights of the Event
 
-On day four, the literary-musical events with talent showcase by the candidates of mr. & ms. goldenstate was held, for the first time, at sm trade hall, sm city of general santos. chaired by mr. roger a. pauya in cooperation with all the general education department instructors, the events contested were as follows: literary – quiz bee, spelling bee, extemporaneous speaking contest, newscasting; musical – vocal solo, duet, pop dance, ballroom (teacher and student category), and the talent showcase for the pageant candidates. it was a day filled with excitements, surprises, and upsets as the battle of the wits and bodies were witnessed.
+- **🏆 Overall Champion**: Division 4 (BSHRM)
+- **🎉 Grand Opening Parade & Cheerdance**: Division 3 dominated Cheerdance; Division 4 won the Parade and Banner Design.
+- **🎭 Literary-Musical Events**: Division 4 shone in Newscasting and Pop Dance.
+- **👑 Mr. & Ms. Goldenstate 2013**: Both winners hailed from Division 4.
+- **💃 Mass Zumba Craze**: Thousands joined a synchronized Zumba performance — the largest in college history.
 
-Day five, held on the same venue, concluded the five-day intramurals meet of goldenstate college-gensan with the staging of this year’s search for the ambassadors of beauty and goodwill- the search for mr. & ms. goldenstate. hosted by mr. ferdinand alcantara and mr. jay costorio, the classical-turned-stylish-fashionable pageant was well attended by distinguished jurors and crowded by the eager and still high-spirited audience from all divisions who are cheering for their bets. unique as it is, there were eight female candidates and four male candidates who vied for the coveted title. the momentum of the event had continuously gone high when the announcement of the beauty titlists was announced. surprisingly, the winners for this year’s mr. & ms. goldenstate went to both the candidates of division 4 (bachelor of science in hotel and restaurant management).
+---
 
-At the end of the day, everybody was considered the winners in all the events. but the one which had received the laurels of triumph was the division 4 which was declared the over-all champions in the 2013 intramurals of goldenstate college-general santos.
+## 🎽 Sports & Games: Energy from Day One
 
-John ralph manilay, development officer opens the college intramurals 2013.
+The Intrams kicked off with a **colorful parade**, cheerleaders, and loud cheers from all four competing divisions. Competitions on **Day 1** included:
 
-200m run women from different divisions.
+- **T-shirt Design** (🏆 Division 3)  
+- **Banner Raising** (🏆 Division 3)  
+- **Banner Design** (🏆 Division 4)  
+- **Parade** (🏆 Division 4)  
+- **Cheerdance** (🏆 Division 3)
 
-One of the highlights, the parade during the opening program of intramurals 2013.
+In the afternoon, students clashed in major sports like **basketball, volleyball, softball, sepak takraw, chess, table tennis, and soccer**.
 
-One of the highlights, the parade during the opening program of intramurals 2013.
+---
 
-One of the highlights, the parade during the opening program of intramurals 2013.
+## 🎤 Day 2–3: Nonstop Action and Zumba Craze
 
-One of the highlights, the parade during the opening program of intramurals 2013.
+**Day 2** brought more action as games continued with electric crowd hosting by **Madam Josie** and **Sir Allan**, who kept energy high while announcing results live.
 
-Division 4 entry in newscasting competition during the intramurals 2013, literary competition.
+A special moment capped **Day 3** with the **Zumba Dance Craze**, where students, faculty, and staff gathered in a unified, synchronized dance — a first in college history.
 
-Division 1 entry in vocal solo contest.
+> 🧍 *“It was the biggest attended Zumba event Goldenstate has ever seen,”* one faculty member shared.
 
-Division 3 participant in extemporaneous contest during the intramurals 2013 musical competition.
+---
 
-Dancesports contest.
+## 📚 Day 4: Battle of the Brains & Talents
 
-Division 2 entry in pop dance contest during the musical.
+For the first time, the **literary-musical events** were hosted at **SM City Gensan Trade Hall**, led by **Mr. Roger A. Pauya** and the **General Education Department**.
 
-Mr. & ms. goldenstate 2013 candidates in their division t- shirt.
+### Literary Events
+- Quiz Bee  
+- Spelling Bee  
+- Extemporaneous Speaking  
+- Newscasting
 
-Mr. & ms. goldenstate 2013.
+### Musical Events
+- Vocal Solo & Duet  
+- Pop Dance  
+- Ballroom (Teacher & Student Categories)  
+- Talent Showcase (Mr. & Ms. Goldenstate Candidates)
+
+The venue was filled with tension and excitement as divisions battled with wit, creativity, and charm.
+
+---
+
+## 👑 Day 5: The Coronation of Goldenstate’s Finest
+
+The grand finale came with the **Mr. & Ms. Goldenstate 2013 Pageant**, hosted by **Mr. Ferdinand Alcantara** and **Mr. Jay Costorio**. The stylish pageant was judged by esteemed jurors and supported by a high-spirited crowd.
+
+- **👸 Ms. Goldenstate 2013** – Division 4  
+- **🤴 Mr. Goldenstate 2013** – Division 4
+
+Eight female and four male candidates competed, but Division 4 took both crowns in a surprise victory, affirming their overall dominance.
+
+---
+
+## 🏁 The Final Verdict
+
+While every division gave their best, **Division 4** rose above the rest and was officially declared **Overall Champion** of the **2013 Goldenstate College–General Santos Intramurals**.
+
+---
+
+## 📸 Photo Highlights
+
+![John Ralph Manilay opens College Intramurals 2013](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-02.jpg)  
+![200m women's run among divisions](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-03.jpg)  
+![Parade highlights from the opening program](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-03.jpg)  
+![Parade highlights from the opening program](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-05.jpg)  
+![Parade highlights from the opening program](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-06.jpg)  
+![Parade highlights from the opening program](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-07.jpg)  
+![Division 4 in the newscasting contest](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-09.jpg)  
+![Division 1 in vocal solo](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-10.jpg)  
+![Division 3 in extemporaneous speech](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-instram2014-01.jpg)  
+![DanceSports competition](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/goldenstate-instram2014-02.jpg)  
+![Division 2 in pop dance](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-11.jpg)  
+![Mr. & Ms. Goldenstate 2013 candidates in division shirts](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-12.jpg)  
+![Mr. & Ms. Goldenstate 2013 titleholders](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/10-20-2013-golden-instrams-2013-13.jpg)
